[package]
name = "allesatt"
version = "0.1.0"
authors = ["Adrian Heine <mail@adrianheine.de>"]
license = "AGPL-3.0-or-later"
repository = "https://github.com/adrianheine/allesatt"
edition = "2021"

[dependencies]
libc = "0.x"
serde = "1"
serde_derive = "1"
serde_json = "1"
time = { version = "0.3", features = ["formatting", "serde", "macros", "parsing"] }
humantime = "2.1"
structopt = "0.3"
atty = "0.2"

[dev-dependencies.regex]
version = "1"
default-features = false
# regex currently requires the standard library, you must re-enable it.
features = ["std"]
